--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -38,7 +38,7 @@ jobs:
           mvn versions:set -DnewVersion=${{ env.PROJECT_VERSION }}
       - name: Build distribution tar
         run: |
-          mvn clean -Prelease-all install org.apache.maven.plugins:maven-deploy-plugin:2.8:deploy -Dspotbugs.skip=true -DskipTests -s $GITHUB_WORKSPACE/.github/asf-deploy-settings.xml   -DaltDeploymentRepository=rdc-snapshots::default::https://packages.aliyun.com/maven/repository/2370427-snapshot-NKfrhH/
+          mvn clean -Prelease-all install org.apache.maven.plugins:maven-deploy-plugin:2.8:deploy -Dspotbugs.skip=true -DskipTests -s .github/asf-deploy-settings.xml -DaltDeploymentRepository=rdc-snapshots::default::https://packages.aliyun.com/maven/repository/2370427-snapshot-NKfrhH/
       - uses: actions/upload-artifact@v3
         name: Upload distribution tar
         with:
