--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -34,7 +34,7 @@ jobs:
           mvn versions:set -DnewVersion=${{ env.PROJECT_VERSION }}
       - name: Build distribution tar
         run: |
-          mvn -Prelease-all -DskipTests -Dspotbugs.skip=true clean install
+          mvn -Prelease-all -DskipTests -Dspotbugs.skip=true install
       - uses: actions/upload-artifact@v3
         name: Upload distribution tar
         with:
@@ -56,5 +56,6 @@ jobs:
           java-version: "8"
           cache: "maven"
       - name: Build distribution tar
-        run: |
-          mvn deploy -DskipTests=true -s .github/asf-deploy-settings.xml -DaltDeploymentRepository=rdc-snapshots::default::https://packages.aliyun.com/maven/repository/2370427-snapshot-NKfrhH/
+        run: mvn deploy -DskipTests=true -s .github/asf-deploy-settings.xml -DaltDeploymentRepository=rdc-snapshots::default::https://packages.aliyun.com/maven/repository/2370427-snapshot-NKfrhH/
+        env:
+          MAVEN_OPTS: -Dmaven.repo.local=${{ github.workspace }}/repository
