--- a/.github/workflows/daily-ci.yml
+++ b/.github/workflows/daily-ci.yml
@@ -180,7 +180,7 @@ jobs:
 
   maven-deploy:
     name: Update to remote maven repository
-    needs: [e2e-test]
+    needs: [dist-tar]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
