--- a/.github/workflows/snapshot-automation.yml
+++ b/.github/workflows/snapshot-automation.yml
@@ -21,7 +21,7 @@ on:
   workflow_dispatch:
     inputs:
       branch:
-        description: 'The branch to trigger the workflow, default is develop. Do not set branch and commit_id together'
+        description: 'The branch to trigger the workflow, default branch is develop'
         required: false
       commit_id:
         description: 'The commit id to trigger the workflow. Do not set branch and commit_id together'
